# OpenMPL

./: .gitignore  CMakeLists.txt  Makefile  README.md  Readme.md  _  conflict_time.xlsx  gdb.sh  readme  run.sh  statistic.xlsx  ~$statistic.xlsx
cmake/: FindGurobi.cmake
mace/: Makefile  aheap.c  aheap.h  compgrh.pl  itemset.c  itemset.h  mace  mace.c  makefile  problem.c  problem.h  queue.c  queue.h  sgraph.c  sgraph.h  sortgrhid.pl  sortout.pl  stdlib2.c  stdlib2.h  test100.grh  test15.grh  transgrh.pl  transnum.pl  untransnum.pl  vec.c  vec.h
sat_glucose/mtl/: template.mk
sat_glucose/parallel/: Makefile  depend.mk  glucose-syrup
sat_glucose/simp/: Makefile  depend.mk  glucose
src/: .readme.swp  CMakeLists.txt  DL_MPL.cpp  DL_MPL.h  DL_struct.cpp  DL_struct.h  DancingLinkColoring.h  DancingLinkColoringOpt.h  Darwin.mk  Enums.cpp  Enums.h  GdsiiIO.cpp  GdsiiIO.h  GeometryApi.h  LayoutDB.cpp  LayoutDB.h  LayoutDBPolygon.cpp  LayoutDBPolygon.h  LayoutDBPolygon_VLSI.cpp  LayoutDBPolygon_VLSI.h  LayoutDBRect.cpp  LayoutDBRect.h  Makefile  MatrixCover.cpp  MatrixCover.h  Msg.cpp  Namespace.h  Params.cpp  Params.h  RecoverHiddenVertex.h  Shapes.h  SimpleMPL.cpp  SimpleMPL.cpp.bakl  SimpleMPL.h  Unix.mk  db.cpp  db.h  enums.cpp  enums.h  io.cpp  (+8 more)
src/dlx/: DL_MPL.cpp  DL_MPL.h  DL_main.cpp  DL_struct.cpp  DL_struct.h  Makefile
src/mpl/: .Makefile.swp  .nfs000000000057ef0300000088  DL_MPL.cpp  DL_MPL.h  DL_main.cpp  DL_struct.cpp  Dancing_link  Enums.cpp  Enums.h  GdsiiIO.cpp  GdsiiIO.h  GeometryApi.h  LayoutDB.h  LayoutDBPolygon.cpp  LayoutDBPolygon.h  LayoutDBRect.h  Makefile  Msg.h  Params.cpp  Params.h  RecoverHiddenVertex.cpp  RecoverHiddenVertex.h  Shapes.h  SimpleMPL.bak  SimpleMPL.cpp  SimpleMPL.h  main.cpp  newSimpleMPL.h  tags  temp.cpp
src/mpl/stitch/: SimpleMPL.cpp  SimpleMPL.h  StitchProc.cpp  StitchProc.h
src/regr/: QuadraticFitting.m
src/sunqi/: DL_MPL.cpp  DL_MPL.h  DL_main.cpp  DL_struct.cpp  DL_struct.h  Dancing_link  Readme.md
test/regr/: data.csv
